2010-07-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.in: Restore the AM_CONDITIONAL debugger supported, we need it to
	include/exclude assembler files from the build in the makefile.

2010-06-29  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a define for the full LLVM version to config.h.

2010-06-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Make sgen_supported default to false to fix non-x86 builds.

2010-06-25  Zoltan Varga  <vargaz@gmail.com>

	* scripts/patch-quiet.sh: Fix this up after the build changes.

2010-06-23  Miguel de Icaza  <miguel@novell.com>

	* configure.in: By default, we will now also buils an SGen-aware
	VM by default.   This can be turned off by using the
	--with-sgen=no command line option.

	Two binaries are produced now: mono and mono-sgen

	--- First Pass ---

	* configure.in: Remove redundant setting of variables in non-Boehm
	cases.

	First pass at supporting the compilation of both
	the Boehm-powered Mono VM and the Sgen-powered one.

	The Boehm configuration flags are no longer part of the config.h
	that we generate, but instead they are part of the CFLAGS
	variables that are used for the following components:

		* io-layer/ because it uses the pthread APIs that are
		wrapped by using utils/gc_wrapper.h

		* metatada/ because we have plenty of GC-specific code

		* mini/ the VM itself

	The patch currently only changes the way that Boehm is compiled,
	no changes for Sgen have been done yet.

	We now pass Boehm CFLAG settings as "BOEHM_DEFINES" which need to
	be added to the three Makefiles above.

	When building the bundled and modified libgc, we also need to pass
	MONO_DEBUGGER_SUPPORTED as it triggers some special features in
	the libgc.

	Simplify the build also by removing the AM_CONDITIONAL debugger
	supported, we now merely check this on the source file and wrap
	the entire debug-debugger.c in an ifdef.

2010-06-05  Mark Probst  <mark.probst@gmail.com>
